Added graph_creation, updated adjacency_matrix, updated parse_tweets
in parse_tweets: contraction dealing added
in graph_creation: very first steps with NetworkX

--- a/parse_tweets.ipynb
+++ b/parse_tweets.ipynb
@@ -2,12 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dependencies\n",
-    "\n",
     "# Standard modules\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -75,7 +73,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Thu Dec 19 23:35:02 +0000 2019</td>\n",
        "      <td>1207806578650468352</td>\n",
        "      <td>These events around the world prompted importa...</td>\n",
@@ -90,7 +88,7 @@
        "      <td>en</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Thu Dec 19 21:48:10 +0000 2019</td>\n",
        "      <td>1207779681627447296</td>\n",
        "      <td>RT @wef: Women's pay equality has slipped back...</td>\n",
@@ -105,7 +103,7 @@
        "      <td>en</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>Thu Dec 19 21:42:14 +0000 2019</td>\n",
        "      <td>1207778191173201920</td>\n",
        "      <td>Happy birthday @Alyssa_Milano!🎈 Thank you for ...</td>\n",
@@ -120,7 +118,7 @@
        "      <td>en</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>Thu Dec 19 20:35:04 +0000 2019</td>\n",
        "      <td>1207761285045260294</td>\n",
        "      <td>“This is my charge to everyone:\\n\\nWe have to ...</td>\n",
@@ -135,7 +133,7 @@
        "      <td>en</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>Thu Dec 19 18:41:46 +0000 2019</td>\n",
        "      <td>1207732772451889152</td>\n",
        "      <td>8 Posters At The CAA Protests In Delhi That Sc...</td>\n",
@@ -200,6 +198,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define function to expand contractions \n",
+    "\n",
+    "def expand_contractions(text):\n",
+    "    # import contractions dict\n",
+    "    from modules.contractions import contractions_dict\n",
+    "    \n",
+    "    contractions_pattern = re.compile('({})'.format('|'.join(contractions_dict.keys())),\n",
+    "                                      flags=re.IGNORECASE | re.DOTALL)\n",
+    "\n",
+    "    def expand_match(contraction):\n",
+    "        match = contraction.group(0)\n",
+    "        first_char = match[0]\n",
+    "        expanded_contraction = contractions_dict.get(match) \\\n",
+    "            if contractions_dict.get(match) \\\n",
+    "            else contractions_dict.get(match.lower())\n",
+    "        expanded_contraction = expanded_contraction\n",
+    "        return expanded_contraction\n",
+    "\n",
+    "    expanded_text = contractions_pattern.sub(expand_match, text)\n",
+    "    expanded_text = re.sub(\"'\", \"\", expanded_text)\n",
+    "    return expanded_text"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -211,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -219,137 +246,17 @@
     {
      "data": {
       "text/plain": [
-       "[[('These', 'D', 0.9796),\n",
-       "  ('events', 'N', 0.9975),\n",
-       "  ('around', 'P', 0.9893),\n",
-       "  ('the', 'D', 0.9995),\n",
-       "  ('world', 'N', 0.9613),\n",
-       "  ('prompted', 'V', 0.9971),\n",
-       "  ('important', 'A', 0.9952),\n",
-       "  ('conversations', 'N', 0.9985),\n",
-       "  ('about', 'P', 0.9942),\n",
-       "  ('gender', 'N', 0.9608),\n",
-       "  ('equality', 'N', 0.9828),\n",
-       "  ('this', 'D', 0.9756),\n",
-       "  ('year', 'N', 0.9904),\n",
-       "  ('.', ',', 0.9982),\n",
-       "  ('#ThisHappened', '#', 0.9454),\n",
-       "  ('via', 'P', 0.9666),\n",
-       "  ('@GlblCtzn', '@', 0.9971),\n",
-       "  ('https://t.co/f6sXRxM0YO', 'U', 0.9914)],\n",
-       " [('RT', '~', 0.9979),\n",
-       "  ('@wef', '@', 0.9983),\n",
-       "  (':', '~', 0.9647),\n",
-       "  (\"Women's\", 'Z', 0.3129),\n",
-       "  ('pay', 'N', 0.7254),\n",
-       "  ('equality', 'N', 0.9963),\n",
-       "  ('has', 'V', 0.9929),\n",
-       "  ('slipped', 'V', 0.995),\n",
-       "  ('back', 'R', 0.8199),\n",
-       "  ('50', '$', 0.9918),\n",
-       "  ('years', 'N', 0.9964),\n",
-       "  ('.', ',', 0.9976),\n",
-       "  ('What', 'O', 0.9931),\n",
-       "  ('can', 'V', 0.9986),\n",
-       "  ('we', 'O', 0.9864),\n",
-       "  ('do', 'V', 0.999),\n",
-       "  ('?', ',', 0.9953),\n",
-       "  ('https://t.co/n5HYhgJkIf', 'U', 0.9917),\n",
-       "  ('#gendergap20', '#', 0.9372),\n",
-       "  ('@UN_Women', '@', 0.998),\n",
-       "  ('https://t.co/28Go3Z', 'U', 0.9706),\n",
-       "  ('…', ',', 0.6902)],\n",
-       " [('Happy', 'A', 0.9854),\n",
-       "  ('birthday', 'N', 0.9933),\n",
-       "  ('@Alyssa_Milano', '@', 0.9947),\n",
-       "  ('!', ',', 0.9957),\n",
-       "  ('🎈', ',', 0.238),\n",
-       "  ('Thank', 'V', 0.9827),\n",
-       "  ('you', 'O', 0.9993),\n",
-       "  ('for', 'P', 0.999),\n",
-       "  ('your', 'D', 0.9933),\n",
-       "  ('courageous', 'A', 0.948),\n",
-       "  ('voice', 'N', 0.9971),\n",
-       "  ('and', '&', 0.998),\n",
-       "  ('activism', 'N', 0.9583),\n",
-       "  ('for', 'P', 0.9995),\n",
-       "  (\"women's\", 'S', 0.6861),\n",
-       "  ('rights', 'N', 0.9986),\n",
-       "  ('.', ',', 0.9974),\n",
-       "  ('https://t.co/yC78g9kXP6', 'U', 0.995)],\n",
-       " [('“', ',', 0.9691),\n",
-       "  ('This', 'O', 0.9163),\n",
-       "  ('is', 'V', 0.9997),\n",
-       "  ('my', 'D', 0.9877),\n",
-       "  ('charge', 'N', 0.9752),\n",
-       "  ('to', 'P', 0.997),\n",
-       "  ('everyone', 'N', 0.9899),\n",
-       "  (':', ',', 0.969),\n",
-       "  ('We', 'O', 0.9956),\n",
-       "  ('have', 'V', 0.9996),\n",
-       "  ('to', 'P', 0.9942),\n",
-       "  ('be', 'V', 0.9995),\n",
-       "  ('better', 'A', 0.5643),\n",
-       "  ('.', ',', 0.9983),\n",
-       "  ('We', 'O', 0.9977),\n",
-       "  ('have', 'V', 0.9996),\n",
-       "  ('to', 'P', 0.9934),\n",
-       "  ('love', 'V', 0.983),\n",
-       "  ('more', 'R', 0.659),\n",
-       "  ('and', '&', 0.9973),\n",
-       "  ('hate', 'V', 0.9955),\n",
-       "  ('less', 'A', 0.921),\n",
-       "  ('.', ',', 0.9973),\n",
-       "  ('Listen', 'V', 0.9939),\n",
-       "  ('more', 'R', 0.6274),\n",
-       "  ('and', '&', 0.9962),\n",
-       "  ('talk', 'V', 0.9826),\n",
-       "  ('less', 'A', 0.9197),\n",
-       "  ('.', ',', 0.9983),\n",
-       "  ('It', 'O', 0.9978),\n",
-       "  ('is', 'V', 0.9999),\n",
-       "  ('our', 'D', 0.9978),\n",
-       "  ('responsibility', 'N', 0.9985),\n",
-       "  ('to', 'P', 0.9993),\n",
-       "  ('make', 'V', 0.9992),\n",
-       "  ('this', 'D', 0.9915),\n",
-       "  ('world', 'N', 0.9639),\n",
-       "  ('a', 'D', 0.9684),\n",
-       "  ('better', 'A', 0.9928),\n",
-       "  ('place', 'N', 0.9979),\n",
-       "  ('.', ',', 0.9973),\n",
-       "  ('”', ',', 0.8205),\n",
-       "  ('-', ',', 0.7817),\n",
-       "  ('@mPinoe', '@', 0.9956),\n",
-       "  ('on', 'P', 0.9806),\n",
-       "  ('activism', 'N', 0.987),\n",
-       "  ('.', ',', 0.9977),\n",
-       "  ('#WomenInSport', '#', 0.8891),\n",
-       "  ('via', 'P', 0.9735),\n",
-       "  ('@nytimes', '@', 0.997),\n",
-       "  ('https://t.co/h9RqFtl2WC', 'U', 0.9924)],\n",
-       " [('8', '$', 0.9957),\n",
-       "  ('Posters', 'N', 0.9978),\n",
-       "  ('At', 'P', 0.9996),\n",
-       "  ('The', 'D', 0.8486),\n",
-       "  ('CAA', '^', 0.9139),\n",
-       "  ('Protests', 'N', 0.8012),\n",
-       "  ('In', 'P', 0.9981),\n",
-       "  ('Delhi', '^', 0.9969),\n",
-       "  ('That', 'D', 0.5254),\n",
-       "  ('Screams', 'N', 0.4914),\n",
-       "  ('Resistance', 'N', 0.9639),\n",
-       "  ('https://t.co/56Z3PSifWn', 'U', 0.9809),\n",
-       "  ('https://t.co/uYuqA456IV', 'U', 0.9982)]]"
+       "[[]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Tag each tweet in dataset\n",
+    "tweets.loc[:,'text'] = tweets.text.apply(expand_contractions,axis = 1)\n",
     "tagged_tweets = pos_tag(tweets.loc[:, 'text'].values)\n",
     "tagged_tweets[:5]"
    ]
@@ -1048,7 +955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
