Created first network plot

--- a/adjacency_matrix.ipynb
+++ b/adjacency_matrix.ipynb
@@ -30,8 +30,8 @@
     "# Constants\n",
     "\n",
     "# Path to words dataset .csv file\n",
-    "WORDS_PATH = 'data/database/words.csv'\n",
-    "HASH_PATH = 'data/database/entities.csv'"
+    "HASH_PATH = 'data/database/entities.csv'\n",
+    "WORDS_PATH = 'data/database/words.csv'"
    ]
   },
   {
@@ -1166,7 +1166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
