--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -39,13 +39,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -1341,8 +1334,8 @@
     "    \n",
     "    fig, axs = plt.subplots(2, 2, figsize=(15, 12))    \n",
     "    axs = axs.ravel()\n",
-    "    if not i: _ = fig.suptitle('Best 20 nodes for 4th most populated communities (2017) ranked by degree, descending')\n",
-    "    if i: _ = fig.suptitle('Best 20 nodes for 4th most populated communities (2018) ranked by degree, descending')\n",
+    "    if not i: _ = fig.suptitle('Best 20 nodes for 4 most populated communities (2017) ranked by degree, descending')\n",
+    "    if i: _ = fig.suptitle('Best 20 nodes for 4 most populated communities (2018) ranked by degree, descending')\n",
     "    # extract 4 more populated clusters\n",
     "    best_cls = partitions[i].groupby(by = partitions[i].iloc[:]).size().sort_values(ascending=False).iloc[:4]\n",
     "    clust = partitions[i][partitions[i].isin(best_cls.index)]\n",
@@ -1381,7 +1374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
