--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -1043,8 +1043,8 @@
     "for i, net in enumerate(nets):\n",
     "    fig, axs = plt.subplots(2, 2, figsize=(15, 12))    \n",
     "    axs = axs.ravel()\n",
-    "    if not i: _ = fig.suptitle('Best 20 nodes for 4th most populated communities (2017) ranked by degree, descending')\n",
-    "    if i: _ = fig.suptitle('Best 20 nodes for 4th most populated communities (2018) ranked by degree, descending')\n",
+    "    if not i: _ = fig.suptitle('Best 20 nodes for 4 most populated communities (2017) ranked by degree, descending')\n",
+    "    if i: _ = fig.suptitle('Best 20 nodes for 4 most populated communities (2018) ranked by degree, descending')\n",
     "    clust = mcl_clusters[i][:4]\n",
     "    for j,c in enumerate(clust):\n",
     "        degrees = pd.Series({node: val for node, val in net.subgraph(c).degree()}).sort_values(ascending=False).iloc[:best]        \n",
