--- a/parse_tweets.ipynb
+++ b/parse_tweets.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -66,7 +66,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>created_at</th>\n",
-       "      <th>id_str</th>\n",
+       "      <th>id</th>\n",
        "      <th>text</th>\n",
        "      <th>truncated</th>\n",
        "      <th>geo</th>\n",
@@ -251,7 +251,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                    created_at               id_str  \\\n",
+       "                    created_at                   id  \\\n",
        "0    2018-06-30 22:35:06+00:00  1013189209488797697   \n",
        "1    2018-06-30 19:35:07+00:00  1013143915308953606   \n",
        "2    2018-06-30 18:35:07+00:00  1013128815575470081   \n",
@@ -306,7 +306,7 @@
        "[3026 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,6 +317,9 @@
     "    'id_str': np.unicode_,\n",
     "    'created_at': np.unicode_\n",
     "})\n",
+    "\n",
+    "tweets.rename(columns = {'id_str' : 'id'}, inplace = True)\n",
+    "\n",
     "\n",
     "# Parse created_at attribute to Datetime format\n",
     "tweets.created_at = pd.to_datetime(tweets.created_at, format='%a %b %d %H:%M:%S %z %Y')\n",
